# upmf

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  autobuilds.xml  ktorrent.xml  upmf-settings.xml  world.xml
doc/: Makefile.am  Makefile.in  stamp-vti  upmf.info  upmf.texi  version.texi
lib/: Makefile.am  Makefile.in
m4/: gnulib-cache.m4  gnulib-comp.m4
po/: Makevars  POTFILES.in  upmf.pot
src/: Makefile.am  Makefile.in  archive.c  archive.h  build.c  build.h  command.c  command.h  common.c  common.h  dependency.c  dependency.h  gettext.h  jobs.c  jobs.h  package.c  package.h  patch.c  patch.h  release.c  release.h  types.h  upmf-config.c  upmf-config.h  upmf.c  use.c  use.h  version.c  version.h
tests/: .gitignore
